# free_field_sim

./: .pdm-python  README.md  hello.py  pyproject.toml
.cursor/rules/: dev-roadmap.mdc  evaluation_rule.mdc  main_window_rule.mdc  next-goals.mdc  project-config-management.mdc  project-structure.mdc  simulation_rule.mdc  visualization3d_rule.mdc  visualization_rule.mdc
src/: evaluation.py  simulation.py  visualization.py  visualization3d.py
src/gui/: main_window.py
