[project]
name = "free-field-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "pyroomacoustics>=0.8.4",
    "pyside6>=6.9.0",
    "pyvista>=0.45.2",
    "pyvistaqt>=0.11.2",
]

[tool.pdm]

[tool.pdm.source]
packages = ["src"]
